test/tasty/pos/src-2/tastytest/TestDelayedInternal2.scala
package tastytest

object TestDelayedInternal2 {
  def test: DelayedInternal[Nothing] = new DelayedInternal.Internal.Instance("") // error
}
